--- a/twitter_assignment3.ipynb
+++ b/twitter_assignment3.ipynb
@@ -88,7 +88,9 @@
    "source": [
     "## Average number of words\n",
     "\n",
-    "Here we are getting total number of words from the tweets and then we calculate the average number of words for individual accounts"
+    "Here we are calculating the average number of words for individual accounts.\n",
+    "\n",
+    "We will take all tweets and calculate the number of words for each tweet of an account. Then we will calculate the average of the number of words we got for each account. "
    ]
   },
   {
@@ -107,17 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Sunny Tweets': 13.9, 'Pooja Tweets': 15.8, 'RGV Tweets': 17.6}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sunnyWordsLength = []\n",
     "for tweet in sunny_tweets:\n",
@@ -131,8 +125,7 @@
     "for tweet in rgv_tweets:\n",
     "    rgvWordsLength.append(word_length(tweet.text))\n",
     "\n",
-    "avgOfWords = {'Sunny Tweets':calc_avg(sunnyWordsLength),'Pooja Tweets':calc_avg(poojaWordsLength),'RGV Tweets':calc_avg(rgvWordsLength)}\n",
-    "print(avgOfWords)"
+    "avgOfWords = {'Sunny Tweets':calc_avg(sunnyWordsLength),'Pooja Tweets':calc_avg(poojaWordsLength),'RGV Tweets':calc_avg(rgvWordsLength)}\n"
    ]
   },
   {
@@ -177,13 +170,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The average number of words used by all people is as below\n",
+    "## Conclusion:\n",
+    "\n",
+    "The average number of words used by all people is as below:\n",
     "\n",
     "- RGV : 17.6\n",
     "- Pooja Hegde : 15.8\n",
     "- Sunny Leone : 13.9\n",
     "\n",
-    "Here we can clearly observe that RGV uses more words compared to others."
+    "Here we can clearly observe that RGV uses more words compared to Pooja Hegde and Sunny Leone, on the other hand Sunny Leone uses less number of words compared to RGV and Pooja Hegde.\n"
    ]
   },
   {
